[package]
name = "casualism"
version = "0.1.0"
edition = "2024"
authors = ["việt trọng dương <cestlaviet8438@gmail.com"]
description = "casual games and the likes!"
readme = "README.md"
repository = "https://github.com/cestlaviet8438/casualism"
license = "MIT"
keywords = ["games", "casual"]
categories = ["games"]

[dependencies]
